crates/hird-check/tests/snapshots/actors__send_typed_against_pid.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
poke : Pid<Msg> → () ! {Send<Msg>}
