crates/hird-check/tests/snapshots/actors__spawn_effect_must_be_declared.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Halt : PlannerMsg
Path : String → Path
Plan : Path → PlannerMsg
St : Int → St
boot : St → Pid<PlannerMsg>
read_repo : { path: Path } → St ! {Tool<ReadRepo>}
error[C0030] 362..380: declared {} but body performs {Spawn<PlannerMsg>}
