crates/hird-check/tests/snapshots/actors__spawn_returns_typed_pid.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Path : String → Path
Plan : Path → PlannerMsg
St : Int → St
Stop : PlannerMsg
boot : St → Pid<PlannerMsg> ! {Spawn<PlannerMsg>}
read_repo : { path: Path } → St ! {Tool<ReadRepo>}
