crates/hird-check/tests/snapshots/actors__spawn_wrong_arity_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Halt : PlannerMsg
Path : String → Path
Plan : Path → PlannerMsg
St : Int → St
boot : ∀a. a
read_repo : { path: Path } → St ! {Tool<ReadRepo>}
error[C0039] 368..383: this spawn supplies 0 argument(s), but actor `Planner`'s init takes 1
