crates/hird-check/tests/snapshots/actors__unknown_member_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type St = St(Int)\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           mailbox: St,\\n\\\n           message: Msg = | Stop,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Stop, st -> St ! {} = st,\\n\\\n         }\")"
---
St : Int → St
error[C0035] 39..46: actor `A` has no member `mailbox`; expected `state`, `message`, `init`, or `handle`
